TestableExecutor: Replaced Class#newInstance() with Constructor#newInstance()